adding newsletter + minor chages in code

--- a/colors.css
+++ b/colors.css
@@ -28,3 +28,9 @@
 .bg-color-snowwhite{
     background-color: #E6E7EB;
 }
+.color-white{
+    color: #FFFFFF;
+}
+.bg-color-white{
+    background-color: #FFFFFF;
+}
