--- a/styles.css
+++ b/styles.css
@@ -295,6 +295,282 @@
     font-size: small;
 }
 
+
+.pricing-table {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 5em;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pricing-card {
+    height: 470px;
+    width: 270px;
+    border-radius: 8px;
+    padding: 3em 2em;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    background-color: var(--color-snowwhite);
+    color: var(--color-dark);
+    position: relative;
+}
+
+.pricing-card ul {
+    inline-size: 100%;
+    overflow-wrap: break-word;
+}
+
+.pricing-card h2 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.pricing-card h3 {
+    font-size: 2rem;
+    margin-bottom: 5px;
+    color: var(--color-dark);
+}
+
+.pricing-card p {
+    font-size: 1rem;
+    color: var(--color-darkbrown);
+    margin-bottom: 20px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    color: var(--color-lightbrown);
+}
+
+li {
+    margin-bottom: 10px;
+    text-align: left;
+}
+
+/* Basic Plan */
+.pricing-basic {
+    background: radial-gradient(ellipse farthest-corner at right bottom, #F0F0F0 0%, #E6E6E6 8%, #DCDCDC 40%, transparent 80%),
+            radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #F8F8F8 8%, #E0E0E0 25%, #D3D3D3 62.5%, #C0C0C0 100%);
+
+    border: 2px solid var(--color-darkbrown);
+}
+
+/* Standard Plan */
+.pricing-standard {
+    background: radial-gradient(ellipse farthest-corner at right bottom, #DCDCDC 0%, #C0C0C0 8%, #A9A9A9 40%, transparent 80%), 
+            radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #E0E0E0 8%, #BEBEBE 25%, #A0A0A0 62.5%, #808080 100%);
+
+    border: 2px solid var(--color-gold);
+}
+
+.pricing-standard h2, .pricing-standard h3 {
+    color: var(--color-snowwhite);
+}
+
+.pricing-star-badge {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: var(--color-gold);
+    color: var(--color-snowwhite);
+    padding: 5px 10px;
+    font-size: 1.5rem;
+    border-radius: 50%;
+}
+
+/* Business Plan */
+.pricing-business {
+    background: radial-gradient(ellipse farthest-corner at right bottom, #F8E9B0 0%, #F2D86B 10%, #E1B652 35%, #D6A445 50%, transparent 80%), 
+            radial-gradient(ellipse farthest-corner at left top, #FFF6E0 0%, #F9E59C 20%, #E3C675 40%, #D6A545 70%, #BF8D2B 100%);
+
+    border: 2px solid var(--color-gold);
+}
+
+.pricing-business h2, .pricing-business h3 {
+    color: var(--color-snowwhite);
+}
+
+/* Button */
+.pricing-btn {
+    display: inline-block;
+    background-color: black;
+    color: white;
+    padding: 7px 14px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    margin-bottom: 20px;
+    transition: background-color 0.3s ease;
+}
+
+.pricing-btn:hover {
+    background-color: #2e2e2e;
+}
+
+.centered {
+    padding: 3em 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 80%;
+    margin: auto;
+}
+
+.email-modal{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;   /* Horizontally center the modal */
+    align-items: center;       /* Vertically center the modal */
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    z-index: 9999;             /* Ensure it stays on top */
+    position: absolute;
+}
+.draggable-container{
+    max-height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    background-color: rgb(230, 231, 235);
+    background-image: url(images/email_bg.png);
+    border-width: 0px;
+    border-style: none;
+    border-color: rgb(41, 43, 44);
+    min-height: 400px;
+    border-image: initial !important;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 24px 0px;
+    width: 800px;
+    max-width: 80%;
+    position: relative;
+    border-radius: 20px;
+}
+
+.email-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.3em;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.poptin-design-fields-form{
+    height: 45px; 
+    font-size: 16px; 
+    cursor: auto; 
+    font-family: Poppins; 
+    text-align: center; 
+    width: 100%; 
+    padding-right: 10px; 
+    padding-left: 10px;
+    outline: none;
+    border: none;
+}
+
+.email-field-wrapper{
+    width: 80%;
+}
+
+.poptin-form-submit-button{
+    line-height: 56px; 
+    left: 272px; 
+    top: 276px; 
+    color: rgb(58, 58, 60); 
+    font-size: 18px; 
+    text-align: center; 
+    width: unset;
+    height: 45px; 
+    padding: 0px; 
+    z-index: 100; 
+    cursor: pointer; 
+    outline: 0px;
+}
+
+
+.froala-editor-button{
+    background-color: rgb(131, 115, 92); 
+    cursor: pointer; height: 
+    45px; line-height: 45px; 
+    width: 100%; max-width: 100%; 
+    font-family: Poppins; 
+    color: rgb(255, 255, 255) !important; 
+    font-size: 18px;
+}
+
+
+.froala-editor-button:hover{
+    background-color: rgb(112, 96, 75); 
+}
+
+.unsub-text{
+    color: rgb(58, 58, 60);
+    font-size: 0.7em;
+}
+
+.email-header{
+    text-align: center; 
+    font-size: 22px; 
+    line-height: 1.2; 
+    left: 100px; 
+    top: 127px; 
+    width: 80%; 
+    z-index: 4; 
+    cursor: auto; 
+    outline: 0px;
+    font-weight: 700;
+    margin: auto;
+}
+
+.close-icon{
+    height:44px;
+    width:44px;
+    font-size:44px;
+    line-height:44px;
+    font-family: 'Yeseva One' !important;    
+    background-color: rgb(255,255,255) !important;
+    border-radius:44px;color: #000000 !important;
+    position: absolute;
+    right: 0;
+    top:0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.close-icon:hover{
+    cursor: pointer;
+}
+
+.email-popup{
+    bottom: 3em;
+    padding: 0;
+}
+
+.lotteryBanner{
+    width: 100%;
+    font-size: 15px;
+    background-color: rgb(245, 185, 56);
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    text-align: center;
+    padding: 7px;
+    cursor: pointer;
+}
+
+@media (min-width: 850px) {
+    .pricing-btn {
+        padding: 10px 20px;
+    }
+}
+
 @media (min-width: 750px) {
     .wave-separator{
         visibility: visible;
@@ -466,21 +742,56 @@
         display: none;
         opacity: 0.2;
     }
+    .pricing-table {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        padding: 5em;
+        flex-direction: row;
+    }
+    .pricing-card h2 {
+        font-size: 1.9rem;
+        margin-bottom: 10px;
+    }
+    .email-header{
+        font-size: 36px; 
+        width: 600px; 
+        text-align: center; 
+        line-height: 1.2; 
+        left: 100px; 
+        top: 127px; 
+        z-index: 4; 
+        cursor: auto; 
+        outline: 0px;
+        font-weight: 700;
+        margin: auto;
+    }    
+
+    .poptin-form-submit-button{
+        width: 256px; 
+    }
+    .email-field-wrapper{
+        width: 50%;
+    }
+
+    .poptinDraggableContainer{
+        padding: 1em 0.5em;
+    }
 }
 
 
 @media (min-width: 1000px) {
     .hero-upper-text{
-        font-size: 2em;
-        width: 24em;
+        font-size: 1.6em;
+        width: 19.2em;
     }
     .hero-middle-text{
-        font-size: 4em;
-        width: 12em;
+        font-size: 3.2em;
+        width: 9.6em;
     }
     .hero-lower-text{
-        font-size: 1.5em;
-        width: 24em;
+        font-size: 1.2em;
+        width: 19.2em;
     }
     .hero-body-image-section{
         width: 35em;
@@ -509,6 +820,26 @@
     .about-section-outer-wrapper{
         max-width: 1100px;
         margin: auto;
+    }
+
+    .pricing-card h2 {
+        font-size: 2.2rem;
+        margin-bottom: 10px;
+    }
+}
+
+@media (min-width: 1500px) {
+    .hero-upper-text{
+        font-size: 2em;
+        width: 24em;
+    }
+    .hero-middle-text{
+        font-size: 4em;
+        width: 12em;
+    }
+    .hero-lower-text{
+        font-size: 1.5em;
+        width: 24em;
     }
 }
 
@@ -580,4 +911,35 @@
         font-weight: 500;
         font-size: medium;
     }
+
+}
+
+
+.old-price {
+    left: 25px;
+    top: -11px;
+    position: absolute;
+    font-size: 18px;
+    margin-right: 10px;
+    color: black;
+}
+
+.old-price::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 2px;
+    background-color: red;
+    z-index: 1;
+}
+
+.new-price {
+    font-size: 36px;
+    font-weight: bold;
+}
+.discount-price{
+    position: relative;
+    margin-top: 0.5em;
 }
